# Synchronisation-Wand

./: LICENSE  README.md
Firmware/: CMakeLists.txt  sdkconfig
Firmware/components/u8g2_esp32_hal/: CMakeLists.txt
Firmware/components/u8g2_esp32_hal/include/: u8g2.h  u8g2_esp32_hal.h
Firmware/components/u8g2_esp32_hal/src/: STATUS_ICONS_font.c  u8g2_d_setup.c  u8g2_esp32_hal.c
Firmware/main/: board_config.h  main.c  user_config.h
PCB V1/: BOM.csv  ESP32S3_PCB_V1.kicad_dru  ESP32S3_PCB_V1.kicad_pcb  ESP32S3_PCB_V1.kicad_prl  ESP32S3_PCB_V1.kicad_pro  ESP32S3_PCB_V1.kicad_sch  Project_Components.bak  Project_Components.kicad_sym  UCL_icon.kicad_mod  fp-info-cache  fp-lib-table  sym-lib-table
PCB V1/Component_3D_Models/: 1977223-1.step  830108208709.stp  BQ25185DLHR.stp  CTB3051_2BK.step  DM3AT-SF-PEJM5_40_.step  NCV59801CML330TCG.stp  PCA9306DQER.stp  TG-3541CE_32.7680KXA3.step  USB4110-GF-A.step
PCB V1/Gerber/: ESP32S3_PCB_V1-B_Cu.gbl  ESP32S3_PCB_V1-B_Mask.gbs  ESP32S3_PCB_V1-B_Paste.gbp  ESP32S3_PCB_V1-B_Silkscreen.gbo  ESP32S3_PCB_V1-Edge_Cuts.gm1  ESP32S3_PCB_V1-F_Cu.gtl  ESP32S3_PCB_V1-F_Mask.gts  ESP32S3_PCB_V1-F_Paste.gtp  ESP32S3_PCB_V1-F_Silkscreen.gto  ESP32S3_PCB_V1-In1_Cu.g2  ESP32S3_PCB_V1-In2_Cu.g3  ESP32S3_PCB_V1-NPTH-drl_map.gbr  ESP32S3_PCB_V1-NPTH.drl  ESP32S3_PCB_V1-PTH-drl_map.gbr  ESP32S3_PCB_V1-PTH.drl  ESP32S3_PCB_V1-job.gbrjob
PCB V1/Project_Component_Footprints.pretty/: 830108208709.kicad_mod  CONN8_DM3AT-SF-PEJM5_HIR.kicad_mod  CTB30512BK.kicad_mod  DSE0006A.kicad_mod  IMU Orientation.kicad_mod  IMU Orientation_2.kicad_mod  (+9 more)
(+11 files in other folders)
